Copyright (c) 2004-2006 Infrae. All rights reserved.
See also LICENSE.txt

SilvaNewsNetwork changes

  unreleased

    Bugs fixed

      - using 'get_intro' for RSS feeds introduced a bug in at least some
        RSS feeds. This has been worked around.

  2.3

    Features added

      - the rss views now use the get_intro method of the items, instead
        of the metadata description.

  2.2

    Features
    
      - in tab_edit you can now see in the preview of a published NewsItem an infobox showing all related info
      
      - changed layout more silva-core-like and improved usability cfr issue 1581
      
      - uniformed css classes for view and viewer newsitems, un-div-ing
      
      - more xhtml compliant

    Bugs fixed
   
      - fixed bug cfr revision 8871 removed can_approve()
      
      - fixed rss icon cfr issue 1506, 1580
      
      - fixed display date rendering and setting cfr issue 1601, 1603
      
      - fixed publish now cfr issue 1605
      
      - fixed imort/export of InlineNewsViewer cfr issue 1600
      
      - fixed render error when a News viewer has a image and PIL is not installed cfr issue 1604
      
      - news articles show now publication date or display date if set cfr issue 1602
      
      - fixed broken external source cfr issue 1434
      

  2.1.3

    Features

      - Reworked public templates: removed divs and replaced by p's with Silva 
        style plus news selectors, indenting, language

      - Made layout of the INV (Inline News Viewer) more generic using standard 
        Silva html classes

      - Fixed space above kupu more robustly, so other extensions can control
        the feedback space too.

      - RSS Aggregator public view: removed hard coded table and replaced with 
        standard Silva html rendering

      - Update publish controls with new layout. Still to be fixed is the 
        switch from a publish now checkbox to a publish now button

    Bugs fixed
